Fix header modal z-index

--- a/services/community-site/src/components/Header/header.scss
+++ b/services/community-site/src/components/Header/header.scss
@@ -109,6 +109,7 @@
 
 .profile-container {
   position: relative;
+  z-index: 999;
 }
 
 .profile-modal {
